# project-manager

./: .env  FRONTEND_BACKEND_RUN_GUIDE.md  GIT_GUIDE.md  MIGRATION_GUIDE.md  PROJECT_SUMMARY.md  README.md  SERVER_RUN_GUIDE.md  TAILWIND_TO_DESIGN_SYSTEM_PLAN.md  build_server_zip.ps1  design_system_migration_plan.md  eslint.config.js  find_overflow_hidden.js  index.html  package-lock.json  package.json  run-server.cmd  start-dev.cmd  tailwind.config.js  서버배포zip만들기.cmd
build_release/: Folder Atlas_0.1.0_x64_en-US.msi  Folder Atlas_0.2.0_x64_en-US.msi  Folder Atlas_0.2.2_x64_en-US.msi  사내서버_설치안내.txt  사용가이드.html  사용안내_READ_ME.txt
docs/: common_components.md  design-system-stage-01-foundation.md  design-system-stage-02-tokens.md  design-system-stage-03-components.md  design-system-stage-04-layout.md  design-system-stage-05-screen-migration.md  design-system-stage-06-a-2-project-overview-form-progress.md  design-system-stage-06-a-project-overview-internals.md  design-system-stage-06-b-2-meeting-schedule-panel.md  design-system-stage-06-b-3-meeting-detail-panels.md  design-system-stage-06-b-4-meeting-create-modal.md  design-system-stage-06-b-meetings-first-structure.md  design-system-stage-06-tailwind-removal-readiness.md  server_env_guide.md  task_board_sync_analysis.md
guide/: implementation_plan.md  계정관리 로직.txt  계정아이디.txt  프로젝트내용.txt
project-manager/: package.json
server/: db.js  index.js  local.db  package-lock.json  package.json  reset-accounts.cmd  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  main.rs
(+107 files in other folders)
