[package]
name = "folder-atlas"
version = "0.2.2"
description = "Folder Atlas - Windows Folder visual explorer"
authors = ["Antigravity"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["api-all", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.4"
open = "5.0"
rusqlite = { version = "0.29", features = ["bundled"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort" # Reduce binary size
codegen-units = 1
lto = true
opt-level = "z"
